--- a/views/index.slim
+++ b/views/index.slim
@@ -1,3 +1,3 @@
-select
+select id='movie'
   - for movie in @movies
-    option value='#{movie.name}' #{movie.name}
+    option value='#{movie.id}' #{movie.name}
