--- a/views/index.slim
+++ b/views/index.slim
@@ -1,3 +1,10 @@
-select id='movie'
-  - for movie in @movies
-    option value='#{movie.id}' #{movie.name}
+doctype html
+html
+  head
+    script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
+  body
+    select id='movie'
+      - for movie in @movies
+        option value='#{movie.id}' #{movie.name}
+
+    script src='js/functionality.js'
