Added select with id biographs

--- a/views/index.slim
+++ b/views/index.slim
@@ -7,4 +7,6 @@ html
       - for movie in @movies
         option value='#{movie.id}' #{movie.name}
 
+    select id='biographs'
+
     script src='js/functionality.js'
