Added select with id times

--- a/views/index.slim
+++ b/views/index.slim
@@ -8,5 +8,6 @@ html
         option value='#{movie.id}' #{movie.name}
 
     select id='biographs'
+    select id='times'
 
     script src='js/functionality.js'
