--- a/views/index.slim
+++ b/views/index.slim
@@ -10,4 +10,9 @@ html
     select id='biographs'
     select id='times'
 
+    br
+    select id='cinemas'
+      - for cinema in @cinemas
+        option value='#{cinema.id}' #{cinema.name} 
+
     script src='js/functionality.js'
