--- a/views/index.slim
+++ b/views/index.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    link rel='stylesheet' type='text/css' href='/css/design.css'
     script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'
   body
     select id='movie'
